# finance-tracker

./: Cargo.toml  README.md  justfile  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
public/: output.css
src/: app.rs  lib.rs  main.rs
src/application/: user_service.rs
src/application/errors/: mod.rs  user_service_errors.rs
src/components/: login.rs  mod.rs  ws_connection_status.rs
src/domain/: mod.rs
src/domain/errors/: user_errors.rs
src/domain/models/: app_state.rs  user.rs
src/domain/repositories/: user_repository.rs
src/domain/value_objects/: email.rs  mod.rs  password_hash.rs  user_id.rs  user_name.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: auth_context.rs  jwt_service.rs  mod.rs
src/infrastructure/config/: app_config.rs
src/infrastructure/errors/: web_errors.rs
src/infrastructure/persistence/: mod.rs  user_repository_cosmosdb.rs
src/infrastructure/web/: mod.rs
src/infrastructure/web/api/: auth.rs
src/infrastructure/web/routing/: app_router.rs
src/infrastructure/web/websocket/: connection_manager.rs  heartbeat.rs  mod.rs
